# mrd_lod

./: .gitignore  README.md  index.html  pyproject.toml
configs/: conservative.toml  default.toml  optimistic.toml
docs/: mrd-lod-sim_BUILD_SPEC.md
scripts/: make_hero_figure.py
src/mrd_lod_sim/: __init__.py  analytic.py  calibrate.py  cli.py  config.py  detect.py  errors.py  molecules.py  panel.py  params.py  report.py  scenario.py  simulate.py  surface.py  validate.py
src/mrd_lod_sim/templates/: dashboard.html.j2
tests/: test_agreement.py  test_analytic.py  test_calibrate.py  test_detect.py  test_errors.py  test_molecules.py  test_report_cli.py  test_surface.py  test_validate.py
