[project]
name = "mrd-lod-sim"
version = "0.1.0"
description = "Limit-of-detection simulator and design tool for tumour-informed ctDNA MRD assays"
readme = "README.md"
authors = [
    { name = "Aleksandr Kotov", email = "alexander.o.kotov@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "numpy>=2.4.6",
    "scipy>=1.17.1",
    "typer>=0.27.0",
]

[project.scripts]
mrd-lod = "mrd_lod_sim.cli:app"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
